<?xml version="1.0" encoding="UTF-8"?>
<project name="javaLauncher" default="default" basedir=".">

  <property environment="env"/>
  <condition property="env.java.home.path" value="${env.JAVA_HOME}" else="${java.home}">
    <isset property="env.JAVA_HOME"/>
  </condition>
  <condition property="default.jdk.path" value="${env.JDK_17}" else="${env.java.home.path}">
    <isset property="env.JDK_17"/>
  </condition>
  <condition property="legacy.or.default.jdk.path" value="${jdk7.path}" else="${default.jdk.path}">
    <isset property="jdk7.path"/>
  </condition>
  <condition property="selected.jdk.path" value="${jdk.path}" else="${legacy.or.default.jdk.path}">
    <isset property="jdk.path"/>
  </condition>
  <property name="javac.executable" value="${selected.jdk.path}/bin/javac"/>
  <property name="out.path"   value="${env.OUT_PATH}"/>
  <property name="out.name"   value="${env.OUT_NAME}"/>
  <property name="out.id"     value="${env.OUT_ID}"/>
  <property name="out.mainclass" value="${env.OUT_MAINCLASS}"/>
  
  <taskdef name="bundleapp"
      classname="com.oracle.appbundler.AppBundlerTask"   
      classpath="third_party/appbundler/appbundler-1.0.jar" />
    
  <path id="class.path">
    <fileset dir="third_party/junit" includes="junit*.jar"/>
  </path>
    
  <target name="compile">
    <mkdir dir="${out.path}"/>
    <javac encoding="UTF8" nowarn="on" deprecation="off" debug="on" includeantruntime="false" destdir="${out.path}"
           executable="${javac.executable}" fork="true" memoryinitialsize="32m" memorymaximumsize="256m"
           target="17" source="17">
      <compilerarg value="-XDignore.symbol.file"/>
      <compilerarg value="--add-exports=java.desktop/java.awt.peer=ALL-UNNAMED"/>
      <compilerarg value="--add-exports=java.desktop/sun.awt=ALL-UNNAMED"/>
      <compilerarg value="--add-exports=java.desktop/sun.lwawt=ALL-UNNAMED"/>
      <compilerarg value="--add-exports=java.desktop/sun.lwawt.macosx=ALL-UNNAMED"/>
      <classpath refid="class.path"/>
      <src path="java/tests/"/>
      <src path="java/org/cef/"/>
    </javac>
    <copy todir="${out.path}">
      <fileset dir="java" casesensitive="no">
        <exclude name="**/*.java" />
      </fileset>
    </copy>
  </target>
    
  <target name="jar" depends="compile">
    <mkdir dir="${out.path}"/>
    <jar destfile="${out.path}/jcef.jar" index="true" update="false" manifest="java/manifest/MANIFEST.MF">
      <fileset dir="${out.path}">
        <include name="org/cef/**"/>
      </fileset>
    </jar>
    <jar destfile="${out.path}/jcef-tests.jar" index="true" update="false">
      <fileset dir="${out.path}">
        <include name="tests/**"/>
      </fileset>
    </jar>
  </target>
    
  <target name="bundle" depends="jar">
    <mkdir dir="${out.path}"/>
    <bundleapp outputdirectory="${out.path}"
                          name="${out.name}"
                   displayname="${out.name}"
                    identifier="${out.id}"
                 mainclassname="${out.mainclass}"
                          icon="third_party/cef/res/CefIcon.icns">
      <classpath dir="${out.path}">
        <include name="jcef.jar"/>
        <include name="jcef-tests.jar"/>
      </classpath>
      <classpath dir="third_party/junit" includes="junit*.jar"/>
      <option value="-Djava.library.path=$APP_ROOT/Contents/Java/:$APP_ROOT/Contents/Frameworks/Chromium Embedded Framework.framework/Libraries" />
      <option value="--add-exports=java.desktop/java.awt.peer=ALL-UNNAMED" />
      <option value="--add-exports=java.desktop/sun.awt=ALL-UNNAMED" />
      <option value="--add-exports=java.desktop/sun.lwawt=ALL-UNNAMED" />
      <option value="--add-exports=java.desktop/sun.lwawt.macosx=ALL-UNNAMED" />
      <option value="--add-opens=java.desktop/sun.awt=ALL-UNNAMED" />
      <option value="--add-opens=java.desktop/sun.lwawt=ALL-UNNAMED" />
      <option value="--add-opens=java.desktop/sun.lwawt.macosx=ALL-UNNAMED" />
      <option value="--add-opens=java.desktop/java.awt=ALL-UNNAMED" />
      <option value="--enable-native-access=ALL-UNNAMED" />
    </bundleapp>
  </target>
</project>
